--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -3,23 +3,28 @@
     {{title}}
   </span>
   <span class="spacer"></span>
+  <div class="toolbar_buttons">
+    <span class="logout_button">
   <button *ngIf="isAuthenticated$ | async" mat-mini-fab (click)="logoutAttempt()" mat-raised-button #tooltip="matTooltip"
   matTooltip="Logout"
   [matTooltipPosition]="position.value!"
-  matTooltipHideDelay="2000"
+  matTooltipHideDelay="1000"
   aria-label="Button that displays a tooltip that hides when scrolled out of the container"
   class="example-button">
     <mat-icon>person</mat-icon>
   </button>
-
+</span>
+<span>
   <button mat-mini-fab (click)="register()" mat-raised-button #tooltip="matTooltip"
   matTooltip="Register"
   [matTooltipPosition]="position.value!"
-  matTooltipHideDelay="2000"
+  matTooltipHideDelay="1000"
   aria-label="Button that displays a tooltip that hides when scrolled out of the container"
   class="example-button">
     <mat-icon>account_box</mat-icon>
   </button>
+</span>
+</div>
 
   
 </mat-toolbar>
